--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,16 +8,11 @@
     "nixpkgs",
     "stdenv"
   ],
-  "psi-header.variables": [
-    [
-      "projectCreationYear",
-      "2021"
-    ]
-  ],
+  "psi-header.variables": [["projectCreationYear", "2021"]],
   "psi-header.config": {
     "blankLinesAfter": 1,
-    "company": "Risser Labs LLC",
-    "copyrightHolder": "Risser Labs LLC",
+    "company": "BitSpur",
+    "copyrightHolder": "BitSpur",
     "creationDateZero": "asIs",
     "forceToTop": true,
     "initials": "CR",
@@ -44,10 +39,6 @@
         " Project: <<projectname>>",
         " File Created: <<filecreated('DD-MM-YYYY HH:mm:ss')>>",
         " Author: <<author>>",
-        " -----",
-        " Last Modified: <<dateformat('DD-MM-YYYY HH:mm:ss')>>",
-        " Modified By: <<author>>",
-        " -----",
         " <<copyrightholder>> (c) Copyright <<yeartoyear(<<projectCreationYear>>, now)>>",
         "",
         "<<licensetext>>"
@@ -66,9 +57,7 @@
       "modDate": "Last Modified:",
       "modDateFormat": "dd-MM-yyyy HH:mm:ss",
       "prefix": " *",
-      "replace": [
-        "File:"
-      ],
+      "replace": ["File:"],
       "rootDirFileName": "LICENSE",
       "suffix": ""
     },
@@ -83,9 +72,7 @@
       "modDate": "Last Modified:",
       "modDateFormat": "dd-MM-yyyy HH:mm:ss",
       "prefix": "#",
-      "replace": [
-        "File:"
-      ],
+      "replace": ["File:"],
       "rootDirFileName": "LICENSE",
       "suffix": ""
     }
@@ -93,17 +80,12 @@
   "psi-header.changes-tracking": {
     "autoHeader": "autoSave",
     "enforceHeader": true,
-    "include": [
-      "rust",
-      "makefile"
-    ],
+    "include": ["rust", "makefile"],
     "isActive": true,
     "modAuthor": "Modified By:",
     "modDate": "Last Modified:",
     "modDateFormat": "dd-MM-yyyy hh:nn:ss",
-    "replace": [
-      "Filename:"
-    ],
+    "replace": ["Filename:"],
     "updateLicenseVariables": true
   },
   "psi-header.license-reference": {
